# spotify-pixel-art-display

./: .gitignore  .gitmodules  README.md  requirements.txt  workspace.code-workspace
backend/: main.py
esp_firmware/: CMakeLists.txt  apply_patches.cmd  apply_patches.ps1  apply_patches.sh
esp_firmware/.devcontainer/: Dockerfile
esp_firmware/main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  http_server.h  idf_component.yml  life_screensaver.cpp  life_screensaver.h  main.cpp  matrix_driver.c  matrix_driver.cpp  matrix_driver.h  matrix_manager.c  matrix_manager.h  wifi_manager.c  wifi_manager.h
esp_firmware/patches/: Adafruit-GFX-Library.patch  Adafruit_BusIO.patch  ESP32-HUB75-MatrixPanel-DMA.patch
spotify_api_server/: main.py
